# pytest-excel

./: CHANGES.rst  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  pytest_excel.py  requirements.txt  setup.py  test_excel_report.py  tox.ini
pytest_excel/: conftest.py  pytest_excel.py
