[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "pytest-excel"
version = "1.8.0"
description = "pytest plugin for generating excel reports"
readme = "README.rst"
keywords = [
  "excel",
  "pytest",
  "report",
]
license = "MIT"
license-files = ["LICEN[CS]E.*"]
authors = [
  { name = "santosh", email = "santosh.srikanta@gmail.com" },
]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Topic :: Utilities"
]

dependencies = [
  "pytest",
  "pandas",
  "openpyxl",
]
urls.Homepage = "https://github.com/ssrikanta/pytest-excel"
urls.Source = "https://github.com/ssrikanta/pytest-excel"
urls.Tracker = "https://github.com/ssrikanta/pytest-excel/issues"

[tool.hatch.envs.test]
features = [
  "test",
]

[tool.hatch.version]
source = "vcs"

[project.entry-points.pytest11]
excel = "pytest_excel.pytest_excel"


[tool.hatch.build.targets.wheel]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
]


[tool.djlint]
profile = "jinja"
ignore = "H005,H016,H030,H031,H006,H013"